# pydotpather

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  test.yml
dotpather/builder/: __init__.py
src/dotpather/: __init__.py  builder.py  differ.py
src/dotpather/builder/: builder.py
test/: conftest.py  test_builder.py
